--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"meriyah": "^6.1.4",
 		"puppeteer": "^24.31.0",
 		"puppeteer-extra": "^3.3.6",
-		"puppeteer-extra-plugin-stealth": "^2.11.2"
+		"puppeteer-extra-plugin-stealth": "^2.11.2",
+		"speaker": "^0.5.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.28.5",
